<resources>
    <string name="app_name">BXMobileAPI</string>
    <string name="user_name_string">用户名：</string>
    <string name="password_string">"密    码："</string>
    <string name="loginpage1">179206</string>
    <string name="login">"登      录"</string>
    <string name="reset">"重      置"</string>
    <string name="UpdateURL">http://%1$s/iPlatMBS/appstore/release/com.baosight.AndroidBusiness/com.baosight.AndroidBusiness.properties</string>
    <string name="AgentService">http://%1$s/iPlatMBS/AgentService</string>
    <string name="LoginService">http://%1$s/iPlatMBS/LoginService</string>
    <string name="dev_host">202.101.47.84</string>
    <string name="test_host">mobiletest.baosteel.com</string>
    <string name="online_host">mobile.baosteel.com</string>
</resources>
