<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@drawable/logbg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical"
        android:background="@drawable/loginbox1"
        android:layout_width="fill_parent"
        android:layout_height="90.0dip"
        android:layout_marginLeft="25.0dip"
        android:layout_marginTop="120.0dip"
        android:layout_marginRight="25.0dip">

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="42.0dip">
            <TextView android:textSize="16.0dip"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingLeft="3.0dip"
                android:layout_width="80.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10.0dip"
                android:text="@string/user_name_string" />

            <EditText android:id="@+id/login_edit_account"
                android:background="@color/alph"
                android:saveEnabled="true"
                android:layout_width="160.0dip"
                android:layout_height="40.0dip"
                android:layout_marginRight="5.0dip"
                android:text="@string/loginpage1"
                android:maxLength="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="42.0dip">
            <TextView android:textSize="16.0dip"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingLeft="3.0dip"
                android:layout_width="80.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10.0dip"
                android:text="@string/password_string" />
            <EditText android:id="@+id/login_edit_pwd"
                android:background="@color/alph"
                android:saveEnabled="true"
                android:layout_width="160.0dip"
                android:layout_height="40.0dip"
                android:text="@string/loginpage1"
                android:maxLength="16"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_marginRight="30.0dip">

        <Button android:textSize="18.0dip"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/login_btn_reset"
            android:background="@drawable/logbtn"
            android:layout_width="100.0dip"
            android:layout_height="35.0dip"
            android:layout_marginLeft="9.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_marginRight="2.0dip"
            android:text="@string/reset" />

        <Button android:textSize="18.0dip"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/login_btn_login"
            android:background="@drawable/logbtn"
            android:layout_width="100.0dip"
            android:layout_height="35.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/login"
            android:layout_below="@+id/TextView02" />
    </LinearLayout>
</LinearLayout>